<resources>
    <string name="app_name">WorkTimeManagement</string>

    <string name="login_guide_text">로그인유지 설정을 하지 않으면 자동으로 로그인이 되지 않아요.\n계속할까요?</string>
    <string name="today_title_default">0000.00.00 (목)</string>
    <string name="setting_text">이번 달 설정</string>
    <string name="today_work_time_title">오늘 근무시간</string>
    <string name="today_work_time_default">0시간 0분</string>
    <string name="go_work_text_default">출근 00:00</string>
    <string name="get_off_work_text_default">퇴근 00:00</string>
    <string name="month_total_title">이번 달 누적 시간</string>
    <string name="month_total_time_default">00:00 / 00:00</string>
    <string name="time_difference_default">(+0시간 0분)</string>
    <string name="btn_today_setting_text">오늘 근무시간 설정</string>
    <string name="show_last_data_text">지난 기록 보기</string>
    <string name="setting_cell_default"> </string>
    <string name="setting_cell_logout">로그아웃</string>
</resources>