<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/today_title_default"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2024.08.01 (목)" />

                <!--Icon?-->
                <ImageView
                    android:id="@+id/btn_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_sync_212121"
                    app:layout_constraintBottom_toBottomOf="@+id/today"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/today"/>

                <!--    <LinearLayout-->
                <!--        android:id="@+id/layout_today_work_time"-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:layout_marginTop="24dp"-->
                <!--        android:orientation="horizontal"-->
                <!--        app:layout_constraintStart_toStartOf="parent"-->
                <!--        app:layout_constraintTop_toBottomOf="@id/today">-->

                <!--        <LinearLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_weight="1"-->
                <!--            android:orientation="vertical">-->

                <!--            <TextView-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:text="출근"-->
                <!--                android:textSize="14sp" />-->

                <!--            <TextView-->
                <!--                android:id="@+id/go_work_time"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:textSize="32sp"-->
                <!--                android:textStyle="bold"-->
                <!--                tools:text="07:59" />-->
                <!--        </LinearLayout>-->

                <!--        <LinearLayout-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_weight="1"-->
                <!--            android:orientation="vertical">-->

                <!--            <TextView-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:text="퇴근"-->
                <!--                android:textSize="14sp" />-->

                <!--            <TextView-->
                <!--                android:id="@+id/get_off_time"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:textSize="32sp"-->
                <!--                android:textStyle="bold"-->
                <!--                tools:text="18:00" />-->
                <!--        </LinearLayout>-->
                <!--    </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/layout_today_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/today_work_time_title"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/today_work_time_default"
                        tools:text="9시간 1분" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/today">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/go_work_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="16sp"
                                android:text="@string/go_work_text_default"
                                tools:text="출근 07:59" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/getoff_work_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="16sp"
                                android:text="@string/get_off_work_text_default"
                                tools:text="퇴근 18:00" />
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/color_f5f5f5"
                        android:layout_marginTop="24dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_month_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@+id/layout_today_total"
                    app:layout_constraintStart_toStartOf="@+id/layout_today_total"
                    app:layout_constraintTop_toBottomOf="@+id/layout_today_total">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/month_total_title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/total_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/month_total_time_default"
                        tools:text="17:11 / 168:00" />

                    <TextView
                        android:id="@+id/time_difference_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:text="@string/time_difference_default"
                        tools:text="(+1시간 11분)" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/color_f5f5f5"
                        android:layout_marginTop="24dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_today_setting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/btn_today_setting_text"
                    android:background="@drawable/bg_border_round_8_bdbdbd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_month_total" />

                <TextView
                    android:id="@+id/btn_show_last_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/show_last_data_text"
                    android:background="@drawable/bg_border_round_8_bdbdbd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_today_setting" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <WebView
            tools:visibility="gone"
            android:visibility="visible"
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>